Added red path (white) to show blocking